# ffmpeg-utils

./: .gitignore  Cargo.toml  LICENSE  README.md  plugin.json  plugin.yml
.github/workflows/: build.yml
src/: lib.rs
