[package]
name = "ffmpeg-utils"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
walkdir = "2.4"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_ProcessStatus"] }
